--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "deploy:user": "gh-pages -d dist -r https://github.com/yusufhnf/yusufhnf.github.io.git"
   },
   "dependencies": {
     "framer-motion": "^11.0.0",
